# IRI_Guias

Clase_19_8_IRI/: CMakeLists.txt  Clase_19_8_IRI.cpp  Clase_19_8_IRI.h  Conv_dias_en_H-M-S.cpp  Conver_Dias_Anio_Meses.cpp  Grafico.cpp  Maximo.cpp  Multiplo.cpp  Peso_total.cpp  PseudoCodeWrapper.hpp  PyA de un circulo.cpp  TrianguloP.cpp  cont_num_neg_pos.cpp  distancia_dos_num.cpp  distancia_tres_puntos.cpp  enum_meses.cpp  fracciones.cpp  raices de bhaskara.cpp  restrcciones_4valores.cpp
