# CMakeList.txt : CMake project for Clase_19_8_IRI, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Clase_19_8_IRI")

# Add source to this project's executable.
add_executable (Clase_19_8_IRI "fracciones.cpp" "PseudoCodeWrapper.hpp"  )

# TODO: Add tests and install targets if needed.
